Migrate all demos to UBI 10 + JDK 25 and fix presentation accuracy issues
Accuracy fixes:
- Fix cost math: revise $80,640 headline formula to 12×$0.768/hr×8,760hrs,
  fix Demo 07 callout from $6,720/month to $560/month
- Fix Valhalla slide: "preview JDK 25+" → "targeting JDK 28 (March 2027)"
- Fix UseContainerSupport version: "since Java 15" → "since Java 10" in
  diagram speaker notes (3 occurrences)
- Fix presenter guide Panama note about allocateArray vs allocateFrom
- Add ParallelGCThreads nuance: clarify CPU limits vs requests
- Remove obsolete -XX:+ZGenerational flag from all code and docs (default
  since JDK 23, non-generational ZGC removed in JDK 24)

UBI 10 + JDK 25 migration (all 9 demos):
- Dockerfiles: eclipse-temurin:25, ubi10/openjdk-25-runtime,
  maven:3.9-eclipse-temurin-25
- pom.xml: maven.compiler.release 21→25
- Spring Boot: 4.0.5 → 4.1.0
- LangChain4j: 0.36.2 → 1.18.1
- Grafana otel-lgtm: 0.8.1 → 0.29.0
- Prometheus: v3.2.1 → v3.13.2
- .sdkmanrc: java=25.0.1-tem